# dynamic-island

./: README.md  app.js  controls.js  package-lock.json  settings.html  style.css
.github/workflows/: release.yml
dynamic-island/: .gitignore  app.js  controls.css  controls.js  glass-settings.html  index.html  island.css  package-lock.json  package.json  settings.css  settings.html  style.css
dynamic-island/frontend/: app.js  controls.js  index.html
dynamic-island/frontend/shaders/: fragment-main.glsl
dynamic-island/shaders/: fragment-bg.glsl  fragment-main.glsl
dynamic-island/src/: main.js  settings-init.js  tauri-init.js
dynamic-island/src-tauri/: Cargo.toml  tauri.conf.json
dynamic-island/src-tauri/capabilities/: default.json
dynamic-island/src-tauri/src/: lib.rs  screencap.rs  settings.rs  sysinfo.rs  types.rs  window.rs
dynamic-island/src/modules/: brightness.js  minimize.js  printer.js  shortcut.js  view-switcher.js
scripts/: copy-frontend.js
shaders/: fragment-bg.glsl  vertex.glsl
src/: dom.js  settings-init.js  state.js  tauri-init.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  printer.rs  screencap.rs  settings.rs  window.rs
src/modules/: capsule-interaction.js  minimize.js
