[package]
name = "island-stl"
version = "0.1.0"
description = "Island STL"
authors = ["you"]
edition = "2021"

[lib]
name = "island_stl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
turbojpeg = { version = "1", features = ["image"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
png = "0.17"
rumqttc = "0.24"
tokio = { version = "1", features = ["full"] }
rustls = "0.22"
winreg = "0.55"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
